--- a/Week_1/Python_type.ipynb
+++ b/Week_1/Python_type.ipynb
@@ -5,7 +5,15 @@
    "id": "0761b4fa",
    "metadata": {},
    "source": [
-    "## Python type of data"
+    "# Python type of data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "798b7f2a",
+   "metadata": {},
+   "source": [
+    "## Numbers"
    ]
   },
   {
@@ -37,9 +45,96 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "944440c3",
+   "metadata": {},
+   "source": [
+    "## Coding Encoding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "617922ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abc\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = u'abc'\n",
+    "print(x)\n",
+    "print(type(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3fd935c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Элеанора Михайловна <class 'str'>\n",
+      "b'\\xd0\\xad\\xd0\\xbb\\xd0\\xb5\\xd0\\xb0\\xd0\\xbd\\xd0\\xbe\\xd1\\x80\\xd0\\xb0 \\xd0\\x9c\\xd0\\xb8\\xd1\\x85\\xd0\\xb0\\xd0\\xb9\\xd0\\xbb\\xd0\\xbe\\xd0\\xb2\\xd0\\xbd\\xd0\\xb0' <class 'bytes'>\n",
+      "Элеанора Михайловна <class 'str'>\n",
+      "Р­Р»РµР°РЅРѕСЂР° РњРёС…Р°Р№Р»РѕРІРЅР° <class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = u'Элеанора Михайловна'\n",
+    "print(x, type(x))\n",
+    "y = x.encode('utf-8')\n",
+    "print(y, type(y))\n",
+    "z = y.decode('utf-8')\n",
+    "print(z, type(z))\n",
+    "q = y.decode('cp1251')\n",
+    "print(q, type(q))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "89f904dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'\\xad\\xd0\\xbb\\xd0\\xb5\\xd0\\xb0\\xd0\\xbd\\xd0\\xbe\\xd1\\x80\\xd0\\xb0 \\xd0\\x9c\\xd0\\xb8\\xd1\\x85\\xd0\\xb0\\xd0\\xb9\\xd0\\xbb\\xd0\\xbe\\xd0\\xb2\\xd0\\xbd\\xd0\\xb0'\n",
+      "37 <class 'bytes'>\n",
+      "19 <class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(y[1:])\n",
+    "print( len(y), type(y))\n",
+    "print(len(x), type(x))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f86fecd6",
+   "metadata": {},
+   "source": [
+    "Некоторые символы кодируются несколькими байтами, некоторые одним байтом. Тип данных Юникод знает об этом. Например в 4 байта 65 000 символов и эмодзи можно записать "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54eb63a2",
+   "id": "4ed3f0c2",
    "metadata": {},
    "outputs": [],
    "source": []
