--- a/Week_1/problems/Divided.ipynb
+++ b/Week_1/problems/Divided.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d23926fc",
+   "id": "8b8f86fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,8 +18,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "dd3a5ed3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(solution(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d56e5e15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(number):\n",
+    "    return sum(x for x in range(number) if x % 3 == 0 or x % 5 == 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "3695ad91",
+   "id": "1bafd638",
    "metadata": {},
    "outputs": [],
    "source": []
